Added new Job, and Personal projects.

--- a/CV-Joannes-i-Sandagerdi.tex
+++ b/CV-Joannes-i-Sandagerdi.tex
@@ -15,10 +15,10 @@
 \header
 {Jóannes í Sandagerði}
 {}
-{Skodsborgvej 190, st, vær 2902\\
-2850 Nærum, Denmark\\
-Email: joannesis@gmail.com\\
-\href{http://linkedin.com/in/joannesisandagerdi}{linkedin.com/joannesisandagerdi}\\
+{Skodsborgvej 190, st, vær 2902
+2850 Nærum, Denmark
+Email: joannesis@gmail.com
+\href{http://linkedin.com/in/joannesisandagerdi}{linkedin.com/joannesisandagerdi}
 Tel: \smcp{(+45) 52 71 70 10}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -57,23 +57,24 @@ Course GPA 6.0 on a 7-point scale, graduated with Distinction \href{http://www.m
 \end{resumeblock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
 \begin{resumeblock}{Professional experience}
 
-\resumeitem{May 2013--August 2013}{\textbf{Localisation and Quality Assurance Engineer – Danish speaking} at Apple, Inc. in Cork, Ireland.\newline
-Summer position as a QA Tester for Danish language.\newline
-- QA testing of Apple's software in Mac OS X, iOS and Windows environments.\newline
-- Developed scripts and utilities for automating the test environment.\newline
-- Issue discovery, reporting, and regression testing.
-}
+\resumeitem{Dec 2014 - Present}{\textbf{Software Developer} at Cimco Integration in Copenhagen, Denmark.\newline
+Software Developer where majority of the work is in C++.\newline
+- Tasks include maintaining existing codebase, and implementing new features.}
 \largeskip
 
+\resumeitem{May 2013--Aug 2013}{\textbf{Localisation and Quality Assurance Engineer – Danish speaking} at Apple, Inc. in Cork, Ireland.\newline
+Summer position as a QA Tester for Danish language.\newline
+- QA testing of Apple's software in Mac OS X, iOS and Windows environments.\newline
+- Developing scripts and utilities for automating the test environment.\newline
+- Issue discovery, reporting, and regression testing.}
+\largeskip
 
 \resumeitem{Mar 2012--May 2012}{\textbf{Java Developer Intern} at Red Hat, Inc. in Brisbane, Australia.\newline
 Developed a tool for the Documentation team in the Brisbane Office.\newline
 - Java, EJB, HTLM, JavaScript tool used for comparing versions of Red Hat XML based Documentation.\newline
-- The tool could generate management reports on differences measured between documents.
-}
+- The tool could generate management reports on differences measured between documents.}
 \largeskip
 
 \resumeitem{Jul 2010--Nov 2010}{\textbf{Peer Assisted Study Session Leader} at Queensland University of Technology.\newline
@@ -82,68 +83,68 @@ Study Session leader for an Introduction to Programming unit, where programming 
 }
 \largeskip
 
-\resumeitem{Nov 2008--Dec 2009}{\textbf{Localisation and Quality Assurance Engineer – Danish speaking} at Apple, Inc.\newline
-Responsible of QA testing Apple software products for Danish language issues.\newline
-- See above.\newline
-- Wrote test case guides for testers.\newline
+\resumeitem{Nov 2008--Dec 2009}{\textbf{Localisation and Quality Assurance Engineer – Danish speaking} at Apple, Inc.
+Responsible of QA testing Apple software products for Danish language issues.
+- See above.
+- Wrote test case guides for testers.
 - Wrote scripts for automatic detection of common internationalization mistakes across Apple software.}
-
 \largeskip
-
 \end{resumeblock}
 
-\newpage
+% \newpage
 
 \begin{resumeblock}{Technical skills}
 
-\resumeitem{Programming}{C\#, Python, Java, Design Patterns, UML design, Git.}
+\resumeitem{Programming}{Java, C++, C\#, Python, Design Patterns, UML design, Git}
 \largeskip
 
-\resumeitem{Web technologies}{HTML, PHP, JavaScript, SQL, CSS.}
+\resumeitem{Web technologies}{HTML, PHP, JavaScript, SQL, CSS}
 \largeskip
 
-\resumeitem{Operating Systems}{Mac OS X, various Linux distributions, Windows, iOS}
+\resumeitem{Operating Systems}{Mac OS X, various Linux distributions, Windows, iOS, Android}
 \largeskip
 
-\resumeitem{Recent interests}{Linux Systems, Amazon EC2, VPS.}
+\resumeitem{Recent interests}{Linux Systems, Amazon EC2, VPS}
 
 \end{resumeblock}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{resumeblock}{Personal projects}
+\begin{resumeblock}{Projects}
+
+\resumeitem{2014 - Present}{Java Application. Developed a project management tool, to be used by translators. Features include creating and tracking clients/jobs, generating reports, viewing earnings.}
+\largeskip
+
+\resumeitem{2014}{Android Application. Developed an application, that enabled the phone to be remote controlled by a web service (WS), for a home security system. The phone could act as either a sensor or actor, depending on configuration received from the WS, and would transmit video/sensor readings to the WS.}
+\largeskip
 
 \resumeitem{2013}{Wrote an application for a Linux server that allowed me to remote control it by sending email messages to a specific address.
 }
 \largeskip
 
-\resumeitem{2013}{Developed a Facebook chat bot that could analyze incoming messages and appropriately reply with a predefined answer: e.g. Q: ``What's your phone number'' A: ``PHONENUMBER'', Q: ``Translate: How are you?'' A: ``¿Cómo estás?''}
+\resumeitem{2013}{Developed a Facebook chat bot that could analyse incoming messages and appropriately reply with a predefined answer: e.g. Q: ``What's your phone number'' A: ``PHONENUMBER'', Q: ``Translate: How are you?'' A: ``¿Cómo estás?''}
 \largeskip
-
 \end{resumeblock}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{resumeblock}{Languages}
-
 \resumeitem{Fluent}{English, Danish, and Faroese}
-\largeskip
-
+\shortskip
 \resumeitem{Can converse}{Swedish and Norwegian}
-
-\end{resumeblock}\newline
+\largeskip
+\end{resumeblock}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{resumeblock}{References}
-
-\resumeitem{Apple, Inc.}{Dave Wiley\newline
+\resumeitem{Apple, Inc.}{\textbf{Dave Wiley}
 European Localization  Quality Manager\newline
 wiley.coyote@apple.com\newline
 +353 21 4284370 or +353 87 9370436
 }
 \largeskip
 
-\resumeitem{Red Hat, Inc.}{Michael Doyle\newline
+\resumeitem{Red Hat, Inc.}{\textbf{Michael Doyle}
 Supervisor at Red Hat\newline
 mdoyle@redhat.com\newline
 +61 7 3514 8216}
