--- a/cv-commands.tex
+++ b/cv-commands.tex
@@ -55,7 +55,7 @@
 %%%%%%
 
 \newenvironment{resumeblock}[1]{\blocktitle{#1}\begin{tabular}{p{4cm}p{13cm}}}{\end{tabular}}
-\newcommand{\resumeitem}[2]{\noindent\raggedright{\textsc{#1}} & #2}
+\newcommand{\resumeitem}[2]{\noindent\hspace*{\fill}#1 & #2}
 
 %%%%%%
 
