Fixed some minor formatting issues.

--- a/CV-Joannes-i-Sandagerdi.tex
+++ b/CV-Joannes-i-Sandagerdi.tex
@@ -5,7 +5,6 @@
 \DeclareTextSymbolDefault{\dh}{T1}
 \include{cv-commands}
 
-
 \begin{document}
 
 \centerline{\Huge Curriculum Vitae \vspace*{5mm}}
@@ -15,9 +14,7 @@
 \header
 {Jóannes í Sandagerði}
 {}
-{Skodsborgvej 190, st, vær 2902
-2850 Nærum, Denmark
-Email: joannesis@gmail.com
+{Email: joannesis@gmail.com
 \href{http://linkedin.com/in/joannesisandagerdi}{linkedin.com/joannesisandagerdi}
 Tel: \smcp{(+45) 52 71 70 10}}
 
@@ -84,10 +81,10 @@ Study Session leader for an Introduction to Programming unit, where programming 
 \largeskip
 
 \resumeitem{Nov 2008--Dec 2009}{\textbf{Localisation and Quality Assurance Engineer – Danish speaking} at Apple, Inc.
-Responsible of QA testing Apple software products for Danish language issues.
-- See above.
-- Wrote test case guides for testers.
-- Wrote scripts for automatic detection of common internationalization mistakes across Apple software.}
+Responsible of QA testing Apple software products for Danish language issues.\newline
+- See above.\newline
+- Wrote test case guides for testers.\newline
+- Wrote scripts for automatic detection of common internationalization errors.}
 \largeskip
 \end{resumeblock}
 
@@ -128,7 +125,7 @@ Responsible of QA testing Apple software products for Danish language issues.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{resumeblock}{Languages}
-\resumeitem{Fluent}{English, Danish, and Faroese}
+\resumeitem{Fluent}{Faroese, Danish, and English}
 \shortskip
 \resumeitem{Can converse}{Swedish and Norwegian}
 \largeskip
@@ -138,7 +135,7 @@ Responsible of QA testing Apple software products for Danish language issues.
 
 \begin{resumeblock}{References}
 \resumeitem{Apple, Inc.}{\textbf{Dave Wiley}
-European Localization  Quality Manager\newline
+European Localization Quality Manager\newline
 wiley.coyote@apple.com\newline
 +353 21 4284370 or +353 87 9370436
 }
